update docker token

--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -173,7 +173,7 @@ jobs:
           EOF
 
 
-      # 18) ملخص التنفيذ
+      #  ملخص التنفيذ
       - name: 📜 Summary
         if: always()
         run: |
