--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -37,8 +37,8 @@ jobs:
           pip install -r requirements.txt
           pip install dvc-ssh
 
-      # 5) تحميل مفاتيح SSH (DVC + السيرفر) دفعة واحدة
-      - name: 🔑 Load SSH keys (DVC + Deploy)
+      # 5) تحميل مفاتيح SSH (للسيرفر)
+      - name: 🔑 Load SSH keys (Deploy)
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: |
@@ -50,15 +50,15 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      # 7) اختبار اتصال SSH (بعد تحميل المفاتيح)
+      # 7) اختبار اتصال SSH
       - name: 🧪 Test SSH connection
         run: ssh -o StrictHostKeyChecking=yes ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo ok"
 
-      # 8) تنظيف أي keyfile محفوظ داخل dvc config (لتفادي مسارات ويندوز)
+      # 8) تنظيف أي keyfile محفوظ داخل dvc config (إن وجد)
       - name: 🧼 Unset DVC keyfile if present
         run: dvc config --unset "remote.origin.keyfile" || true
 
-      # 9) تسجيل الدخول إلى W&B
+      # 9) تسجيل الدخول إلى W&B (اختياري لو بتحتاجه بالـ repro)
       - name: 🔑 Login to Weights & Biases
         run: wandb login ${{ secrets.WANDB_API_KEY }}
 
@@ -98,7 +98,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # 16) التحقق من وجود مفتاح النشر (للتشخيص)
+      # 16) التحقق من وجود مفتاح النشر
       - name: ✅ Check deploy key presence
         run: |
           if [ -z "${{ secrets.SERVER_SSH_KEY }}" ]; then
@@ -106,74 +106,63 @@ jobs:
           fi
           echo "✅ SERVER_SSH_KEY is set."
 
-      # 17) نشر التطبيق + Health Check
-      - name: 🚀 Deploy via SSH (install docker if missing + run + health check)
+      # 17) النشر عبر SSH 
+      - name: 🚀 Deploy via SSH (clean version, no backslashes)
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          ssh -tt \
-            -o StrictHostKeyChecking=yes \
-            -o TCPKeepAlive=yes \
-            -o ServerAliveInterval=15 \
-            -o ServerAliveCountMax=6 \
-            "${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}" <<'EOF'
-          set -e
+          ssh -o BatchMode=yes \
+              -o StrictHostKeyChecking=yes \
+              -o TCPKeepAlive=yes \
+              -o ServerAliveInterval=15 \
+              -o ServerAliveCountMax=6 \
+              "${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}" '
+            set -euo pipefail;
+            IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest";
 
-          IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest"
+            # 0) Install curl if missing
+            if ! command -v curl >/dev/null 2>&1; then
+              sudo apt-get update -y;
+              sudo apt-get install -y curl;
+            fi;
 
-          # 0) تحديث الحزم الأساسية
-          if ! command -v curl >/dev/null 2>&1; then
-            sudo apt-get update -y
-            sudo apt-get install -y curl
-          fi
+            # 1) Install Docker if missing
+            if ! command -v docker >/dev/null 2>&1; then
+              sudo apt-get update -y;
+              sudo apt-get install -y docker.io;
+              sudo systemctl enable --now docker;
+            fi;
 
-          # 1) تثبيت Docker إن لم يكن موجودًا
-          if ! command -v docker >/dev/null 2>&1; then
-            echo "🧩 Installing Docker..."
-            # أبسط خيار ثابت على Ubuntu
-            sudo apt-get update -y
-            sudo apt-get install -y docker.io
-            # تأكد من عمل الخدمة
-            sudo systemctl enable --now docker
-            # نستخدم sudo لاحقًا بدل إضافة المستخدم لمجموعة docker (لأنها تحتاج تسجيل خروج/دخول)
-          fi
+            # 2) Docker login
+            echo "${{ secrets.DOCKER_HUB_TOKEN }}" | sudo docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin || true;
 
-          # 2) تسجيل دخول Docker Hub (لا تفشل الـ pipeline لو فشل اللوجين)
-          echo "${{ secrets.DOCKER_HUB_TOKEN }}" | sudo docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin || true
+            # 3) Pull image and run
+            sudo docker pull "$IMAGE";
+            sudo docker stop mlops-api || true;
+            sudo docker rm mlops-api || true;
+            sudo docker run -d --name mlops-api \
+              -p 8080:8000 \
+              --restart=always \
+              -e WANDB_API_KEY="${{ secrets.WANDB_API_KEY }}" \
+              "$IMAGE";
 
-          # 3) سحب الصورة وتشغيل الحاوية
-          sudo docker pull -q "$IMAGE"
+            # 4) Health check
+            echo "⏳ Waiting for API to start...";
+            for i in {1..20}; do
+              if curl --max-time 2 -sSf http://localhost:8080/docs >/dev/null; then
+                echo "✅ API is up and running on :8080";
+                exit 0;
+              fi;
+              echo "Retrying in 3s...";
+              sleep 3;
+            done;
 
-          # أوقف/احذف النسخة القديمة إن وجدت
-          sudo docker stop mlops-api || true
-          sudo docker rm mlops-api || true
-
-          # 4) تشغيل الخدمة
-          # ملاحظة: المنفذ 80 يتطلب صلاحيات root؛ نحن نستخدم sudo docker لذلك لا مشكلة.
-          # إن كان عندك Nginx/Apache على 80 سيحدث تعارض—غيّر المنفذ مثلاً إلى 8080:8000 ثم عدّل فحص الصحة.
-          sudo docker run -d --name mlops-api \
-            -p 80:8000 \
-            --restart=always \
-            -e WANDB_API_KEY="${{ secrets.WANDB_API_KEY }}" \
-            "$IMAGE"
-
-          # 5) فحص الصحة
-          echo "⏳ Waiting for API to start..."
-          for i in {1..10}; do
-            if curl -sSf http://localhost:80/docs >/dev/null; then
-              echo "✅ API is up and running"
-              exit 0
-            fi
-            echo "Retrying in 3s..."
-            sleep 3
-          done
-
-          echo "❌ API did not start in expected time"
-          sudo docker logs --tail=200 mlops-api || true
-          exit 1
-          EOF
+            echo "❌ API did not start in expected time";
+            sudo docker logs --tail=200 mlops-api || true;
+            exit 1;
+          '
 
 
-      #  ملخص التنفيذ
+      # 18) ملخص التنفيذ
       - name: 📜 Summary
         if: always()
         run: |
